translates additional keys and values for CSW in DE and EN_GB

--- a/de/LC_MESSAGES/ckan.po
+++ b/de/LC_MESSAGES/ckan.po
@@ -6605,5 +6605,5 @@ msgid "quarterly"
 msgstr "vierteljährlich"
 
 #: dynamic values from CSW harvester used in ckan/template/packge/snippets/additional_info.html
-# msgid ""
-# msgstr ""
+msgid "asNeeded"
+msgstr "bei Bedarf"
