--- a/en_GB/LC_MESSAGES/ckan.po
+++ b/en_GB/LC_MESSAGES/ckan.po
@@ -6446,3 +6446,39 @@ msgstr "Application"
 #: dynamic values from CSW harvester used in ckan/template/packge/snippets/additional_info.html
 msgid "asNeeded"
 msgstr "as needed"
+
+#################
+# LIS HARVESTER #
+#################
+
+#: keys needed by LIS-harvester
+msgid "http://purl.org/dc/terms/accrualPeriodicity"
+msgstr "Accrual Periodicity"
+
+#: keys needed by LIS-harvester
+msgid "http://www.w3.org/ns/dcat#contactPoint"
+msgstr "Data Manufacturer"
+
+#: keys needed by LIS-harvester
+msgid "http://purl.org/linked-data/sdmx/2009/code#freq-A"
+msgstr "annual"
+
+#: keys needed by LIS-harvester
+msgid "http://purl.org/linked-data/sdmx/2009/code#freq-Q"
+msgstr "quarterly"
+
+#: keys needed by LIS-harvester
+msgid "http://id.loc.gov/vocabulary/iso639-1/de"
+msgstr "German"
+
+#: keys needed by LIS-harvester
+msgid "http://purl.org/dc/terms/language"
+msgstr "Language"
+
+#: keys needed by LIS-harvester
+msgid "http://www.w3.org/ns/dcat#modified"
+msgstr "Modification Date"
+
+#: keys needed by LIS-harvester
+msgid "http://www.w3.org/ns/dcat#theme"
+msgstr "Main Category"
